--- a/learn-spring-framework02/src/main/resources/application.properties
+++ b/learn-spring-framework02/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-logging.level.com.udemy.learnspringframework.RestApi=debug
-spring.profiles.active=dev
-currency-service.url=https://www.google.com
-currency-service.username=WhatEverYouWant
-currency-service.key=ImportantKey1222
+#logging.level.com.udemy.learnspringframework.RestApi=debug
+#spring.profiles.active=dev
+#currency-service.url=https://www.google.com
+#currency-service.username=WhatEverYouWant
+#currency-service.key=ImportantKey1222
+#management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=UTC&useLegacyDatatimeCode=false
 spring.datasource.username=root
 spring.datasource.password=Raghav9,@
